<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"

        android:id="@+id/group1">
        <item android:id="@+id/developers"
            android:title="@string/about_us"
            android:icon="@drawable/ic_baseline_person_24"
            >

        </item>
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share">

        </item>

    </group>
    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/group2">
                <item android:id="@+id/Feedback"
                    android:icon="@drawable/ic_baseline_email_24"
                    android:title="@string/feedback">

                </item>
                <item android:id="@+id/Report"
                    android:icon="@drawable/ic_baseline_email_24"
                    android:title="@string/Query">

                </item>
                <item android:id="@+id/suggestion"
                    android:icon="@drawable/ic_baseline_email_24"
                    android:title="@string/Suggestion">

                </item>
                <item android:id="@+id/whatsapp"
                    android:icon="@drawable/whatsapp"
                    android:title="@string/whatsapp">

                </item>

            </group>

        </menu>
    </item>



</menu>