<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="200dp"
    app:cardCornerRadius="10dp"
     android:layout_marginTop="5dp"

    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:layout_marginBottom="3dp"
            android:src="@drawable/about1"
            android:scaleType="fitXY"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_us"
            android:fontFamily="cursive"
             android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="18sp">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="@string/quot"/>

        <Button
            android:id="@+id/thanks"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/thank"
             android:layout_margin="10dp"
             android:onClick="dismisss"
            android:background="#B39E43"
           >

        </Button>

    </LinearLayout>



</androidx.cardview.widget.CardView>